# PyHuskyLens

./: .gitignore  .pre-commit-config.yaml  LICENSE  Library  PUBLISH.md  README.md  index.rst  package.json  pyproject.toml  test.mpy
Projects/ESP32 Pupremote Huskylens/: README.md  lpf2.py  main.py  pupremote.py  pybricks_test.py
Projects/EV3_FaceFinder/: main.py  notes.txt
Projects/MINDSTORMS Line follower/: line_follower.py
Projects/SPIKE Face tracker/: SPIKEFacetracker.py
Projects/ev3_line_follower/: main.py  pyhuskylens.py
Tools/: compile_installer.py  pyhuskylens.mpy
docs/: index.rst
examples/: demo.py  spike_quickstart.py
installer/: DEVELOPER_NOTES.md  README.md  base_installer.py  create_installer.py  install_pyhuskylens.py
pyhuskylens/: __init__.py  pyhuskylens.py  rpi.py
tests/: __init__.py  conftest.py  micropython.py  test_backward_compatibility.py  test_constants.py  test_data_objects.py  test_imports.py  test_mpy_cross_compilation.py  test_utilities.py
